--- a/platformio.ini
+++ b/platformio.ini
@@ -1,23 +1,10 @@
 #
-# Project Configuration File
+# PlatformIO Project Configuration File
 #
-# A detailed documentation with the EXAMPLES is located here:
-# http://docs.platformio.org/en/latest/projectconf.html
+# Please make sure to read documentation with examples first
+# http://docs.platformio.org/en/stable/projectconf.html
 #
-
-# A sign `#` at the beginning of the line indicates a comment
-# Comment lines are ignored.
-
-# Simple and base environment
-# [env:mybaseenv]
-# platform = %INSTALLED_PLATFORM_NAME_HERE%
-# framework =
-# board =
-#
-# Automatic targets - enable auto-uploading
-# targets = upload
-
-[env:nanoatmega328]
-platform = atmelavr
+[env:esp01]
+platform = espressif
 framework = arduino
-board = nanoatmega328
+board = esp12e
