--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,9 @@
 # Please make sure to read documentation with examples first
 # http://docs.platformio.org/en/stable/projectconf.html
 #
-[env:esp01]
+
+[env:esp12e]
 platform = espressif
 framework = arduino
 board = esp12e
+lib_deps = PubSubClient
