Stop using a deprecated platform

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,8 +5,8 @@
 # http://docs.platformio.org/en/stable/projectconf.html
 #
 
-[env:esp12e]
-platform = espressif
+[env:nodemcuv2]
+platform = espressif8266
 framework = arduino
-board = esp12e
+board = nodemcuv2
 lib_deps = PubSubClient
